# snake

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: cli.rs  config.rs  game.rs  input.rs  main.rs  output.rs  path.rs  snake.rs  types.rs  ui.rs
