[package]
name = "snake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
crossterm = "0.25"
int-enum = "0.4.0"
crossbeam-channel = "0.5"
clap = { version = "4.0", features = ["derive"] }
